# Fractals

./: .gitignore  Cargo.toml  README.md  README.org  default.nix  flake.nix  justfile  shell.nix
src/: basic_tree.rs  fancy_tree.rs  lib.rs  main.rs  sierp.rs  snowflake.rs  system_l.rs
tests/: sierp.rs
